dark mode active fix

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -526,7 +526,7 @@ $dropdown-max-width: 25rem !default;
 $dropdown-scrollable-height: 13rem !default;
 
 $dropdown-link-active-color: var(--#{$prefix}primary)  !default;
-$dropdown-link-active-bg: $active-bg !default;
+$dropdown-link-active-bg: var(--#{$prefix}active-bg) !default;
 
 //tooltip
 $tooltip-bg: var(--#{$prefix}bg-surface-dark) !default;
@@ -579,7 +579,7 @@ $nav-link-icon-size: $icon-size !default;
 $nav-link-icon-color: var(--#{$prefix}icon-color) !default;
 
 $nav-pills-link-active-color: var(--#{$prefix}primary)  !default;
-$nav-pills-link-active-bg: $active-bg !default;
+$nav-pills-link-active-bg: var(--#{$prefix}active-bg) !default;
 
 $nav-bordered-border-color: var(--#{$prefix}border-color) !default;
 $nav-bordered-border-width: var(--#{$prefix}border-width) !default;
@@ -707,7 +707,7 @@ $list-group-bg: inherit !default;
 $list-group-border-color: var(--#{$prefix}border-color) !default;
 $list-group-action-color: inherit !default;
 $list-group-hover-bg: $hover-bg !default;
-$list-group-active-bg: $active-bg !default;
+$list-group-active-bg: var(--#{$prefix}active-bg) !default;
 $list-group-active-border-color: $list-group-border-color !default;
 $list-group-active-color: inherit !default;
 
