--- a/src/scss/layout/_dark.scss
+++ b/src/scss/layout/_dark.scss
@@ -24,6 +24,8 @@ body:not(.theme-dark) .hide-theme-light {
     --#{$prefix}bg-surface-dark: #{$dark-mode-darken};
     --#{$prefix}bg-surface-secondary: #{$dark-mode-darken};
 
+    --#{$prefix}active-bg: #{$dark-mode-lighten};
+
     --#{$prefix}card-bg: #{$dark-mode-darken};
     --#{$prefix}card-bg-hover: #{$dark-mode-darken};
     --#{$prefix}card-bg-rgb: #{to-rgb($dark-mode-darken)};
